// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Time renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX dZxXia"
    disabled={true}
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL JOvHL"
      disabled={true}
      placeholder=" "
      type="time"
      value="Text"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dZxXia"
    disabled={true}
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL gsTWKg"
      disabled={true}
      placeholder=" "
      type="time"
      value="Text"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX dZxXia"
    disabled={true}
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL crpHmu"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL kDWyPF"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-VcoSR jatpWO"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL fWoZBG"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-VcoSR jatpWO"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL cHypwM"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-VcoSR jatpWO"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL JOvHL"
      placeholder=" "
      readOnly={true}
      type="time"
      value="Read only text"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL gsTWKg"
      placeholder=" "
      readOnly={true}
      type="time"
      value="Read only text"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL crpHmu"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL JOvHL"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL gsTWKg"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL crpHmu"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL JOvHL"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL gsTWKg"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL crpHmu"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-goMRkL jsjoiI"
      dir="rtl"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-goMRkL nggJb"
      dir="rtl"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL dPSaoh"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-glUVip fQRjhM"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <input
      className="sc-goMRkL JOvHL"
      placeholder="medium"
      type="time"
    />
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <input
      className="sc-goMRkL gsTWKg"
      placeholder="large"
      type="time"
    />
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <div
      className="sc-jNrqiC jBcQib"
    >
      <input
        className="sc-goMRkL dVjUZr"
        placeholder="xlarge"
        type="time"
      />
      <label
        className="sc-glUVip fKjLAb"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      medium
    </label>
    <input
      className="sc-goMRkL hWBUEc"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <label
      className="sc-gmSHEY coDCGe"
    >
      large
    </label>
    <input
      className="sc-goMRkL gTNnSf"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-iOnGvX gGsifk"
  >
    <div
      className="sc-jNrqiC hjjcDo"
    >
      <input
        className="sc-goMRkL crpHmu"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-glUVip fKjLAb"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-VcoSR dKUTwy"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
